# GIR_Project

./: .gitignore  Irchel_Geoparser_ACLED.ipynb  PointClass.py  README.md  acled_maps.R  bind_edinburgh_output_to_pickle.py  create_raw_txt_files_for_edgeoparser.py  match_outputs_with_original.py  preprocess.py  process_edinburg_output_to_csv.py  pyproject.toml  result_analysis.py  run-multiple-files.sh
