[tool.poetry]
name = "gir-project"
version = "0.1.0"
description = ""
authors = ["Sebastian <sebastian.gmuer@sotomo.ch>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
pandas = "^2.2.3"
geopandas = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
